deploy/manifests/prod/us-east-2/tenant/storetheindex/instances/oden/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: indexer
spec:
  template:
    spec:
      containers:
        - name: indexer
          volumeMounts:
            - mountPath: /data
              name: data
          resources:
            limits:
              cpu: "30"
              memory: 60Gi
            requests:
              cpu: "30"
              memory: 60Gi
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: node.kubernetes.io/instance-type
                    operator: In
                    values:
                      - c6a.8xlarge
                  - key: topology.kubernetes.io/zone
                    operator: In
                    values:
                      - us-east-2b
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: oden-data
      tolerations:
        - key: dedicated
          operator: Equal
          value: c6a-8xl
          effect: NoSchedule
